@@ -12,7 +12,14 @@ Changes in Bitbake 1.8.x:
 	- Add pn-PN to overrides when evaluating PREFERRED_VERSION
 	- Improve the progress indicator by skipping tasks that have 
 	  already run before starting the build rather than during it
-	- Add profiling option (-P)		
+	- Add profiling option (-P)
+	- Add BB_SRCREV_POLICY variable (clear or cache) to control SRCREV cache
+	- Add SRCREV_FORMAT support
+	- Fix local fetcher's localpath return values
+	- Apply OVERRIDES before performing immediate expansions
+	- Allow the -b -e option combination to take regular expressions
+	- Fix handling of variables with expansion in the name using _append/_prepend
+	  e.g. RRECOMMENDS_${PN}_append_xyz = "abc"
 
 Changes in Bitbake 1.8.6:
 	- Correctly redirect stdin when forking
